ui/components-react/src/components-react/filter-builder/FilterBuilderRule.scss
/*---------------------------------------------------------------------------------------------
 * Copyright (c) Bentley Systems, Incorporated. All rights reserved.
 * See LICENSE.md in the project root for license terms and full copyright notice.
 *--------------------------------------------------------------------------------------------*/
.fb-row {
  --background-color: var(--iui-color-background);
  --border-color: var(--iui-color-border);
  --operator-width: 5rem;
  --property-name-width: 25%;
  --condition-width: 10rem;
  --toolbar-width: 6.25rem;
  display: block;
  position: relative;

  .fb-row-container {
    align-items: flex-start;
    gap: var(--iui-size-s);
  }

  .fb-row-condition {
    width: var(--condition-width);
  }

  .fb-property-value {
    flex: 1;
    width: 15rem;
    display: flex;
    flex-direction: column;
  }

  .fb-row-toolbar {
    width: var(--toolbar-width);
    margin-left: auto;
    justify-content: space-between;
  }
}

